Fix some BasicInfoView warnings
Refactor Battlefield Support Asset checkbox label